# air-traffic-pulse

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
dbt/: .user.yml  dbt_project.yml  profiles.yml  profiles.yml.example
dbt/models/: exposures.yml  sources.yml
dbt/models/marts/: mart_latest_ingestion_run.sql  mart_latest_insights_by_bbox.sql  mart_latest_snapshot_by_bbox.sql  mart_traffic_anomalies_5min.sql  mart_traffic_baseline_28d.sql  mart_traffic_timeseries_5min.sql  metricflow_time_spine.sql  metrics.yml  schema.yml  semantic_models.yml
dbt/models/staging/: schema.yml  stg_ingestion_runs.sql  stg_opensky_states.sql
docs/: data_contract.md
ingestion/: __init__.py  load_states.py  opensky_client.py
src/air_traffic_pulse/: __init__.py  __main__.py  cli.py  config.py  log.py
tests/: test_config.py  test_demo_mode.py  test_ingestion_smoke.py  test_opensky_parse.py
tests/fixtures/: opensky_states_sample.json  opensky_states_sample_london.json
tools/: generate_placeholders.py  seed_demo_data.py
warehouse/: __init__.py  duckdb_conn.py  schema.sql
